--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <main>
 
 <div class="all">
-    <div class="container">
+    <div class="first_container">
       <div class="image">
 
     <div id="carousel-container">
