--- a/kultura.html
+++ b/kultura.html
@@ -27,8 +27,8 @@
 
 <main>
 <div class="all">
-  <div class="container">
-    <div class="image-kult"><img src="img/film.jpeg" alt="film" title="film"></div>
+  <div class="first_container">
+    <div class="img"><img src="img/film.jpeg" alt="film" title="film"></div>
     <div class="text">
       <div class="title">FILM "OSTATNIA RODZINA"</div>
       Film opowiadać będzie poruszające losy rodziny Beksińskich. Akcja filmu będzie rozgrywała się na przestrzeni 28 lat,
@@ -50,7 +50,7 @@
   </div>
 
   <div class="container">
-    <div class="image-kult"><img src="img/ksiazka.jpeg" alt="ksiazka" title="ksiazka"></div>
+    <div class="img"><img src="img/ksiazka.jpeg" alt="ksiazka" title="ksiazka"></div>
     <div class="text">
       <div class="title">KSIĄŻKA "PORTRET PODWÓJNY"</div>
       To nie jest książka o znanym i modnym malarzu, który malował dziwne i straszne obrazy. To nie jest książka o jego
@@ -70,7 +70,7 @@
   </div>
 
   <div class="container">
-    <div class="image-kult"><img src="img/wystawa.jpg" alt="muzeum" title="muzeum"></div>
+    <div class="image"><img src="img/wystawa.jpg" alt="muzeum" title="muzeum"></div>
     <div class="text">
       <div class="title">GALERIA ZDZISŁAWA BEKSIŃSKIEGO</div>
       Największa na świecie – licząca ok. 600 prac – ekspozycja prezentuje bogatą i różnorodną twórczość jednego z
