--- a/rodzina.html
+++ b/rodzina.html
@@ -28,7 +28,7 @@
 
 <main>
   <div class="all">
-    <div class="container">
+    <div class="first_container">
       <div id="textonly">
         <div id="quote">„Namalować mogę każdą rzecz, natomiast tu (w fotomontażach) muszę operować tym, co udało
           mi się sfotografować. Mogę tym manipulować, deformując kształt, kolor, rozmiar i fakturę, ale tylko w pewnym
