--- a/tworczosc.html
+++ b/tworczosc.html
@@ -28,7 +28,7 @@
 
 <main>
   <div class="all">
-  <div class="container">
+  <div class="first_container">
     <div id="textonly">
       <div id="quote">Malarz powinien "widzieć" i - jak sądzę nie musi rozumieć tego, co widzi.
         Bardzo trudne, jeśli nie niemożliwe, jest opowiedzenie utworu muzycznego i podobnie trudno jest chyba z obrazem.
