--- a/zyciorys.html
+++ b/zyciorys.html
@@ -27,7 +27,7 @@
 </header>
 <main>
   <div class="all">
-  <div class="container">
+  <div class="first_container">
   <div class="timeline">
   <ul>
     <li>
