--- a/formularz.html
+++ b/formularz.html
@@ -29,7 +29,7 @@
 </header>
 <main>
 
-  <div class="form-style-10">
+  <div class="form-style-10_first">
     Jeśli chcesz być informowany o wydarzeniach związanych ze Zdzisławem Beksińskim jako pierwszy, zapraszamy do newslettera.
     Co tydzień bedziesz otrzymywać również maila z cytatem artysty oraz mniej znaną grafiką, obrazem czy zdjęciem.
     Nie możesz tego przegapić!
